Add Invoices and Expenses to Reports

--- a/app/stylesheets/projects.scss
+++ b/app/stylesheets/projects.scss
@@ -134,7 +134,7 @@ div.project {
 
 
 body#report  {
-	@include gradient(white, white);
+  background-color: white;
 	div#content { width: 680px; margin: 0px 20px;}
 	p.sender{
 	  padding: 15px 0px 10px 0px; 
@@ -160,38 +160,6 @@ body#report  {
 	
 	div#works{
 	  table { font-family: "Courier New"; } 
-	  table.work {
-	    font-size: 12px;
-	    padding-bottom: 5px;
-    	td {
-    	  padding: 5px 0px;
-    	  border-bottom: 1px dashed grey;
-    	}
-    	td.time {
-    	  width: 100px;
-    	  margin-right: 10px;
-    	}
-    	td.description{
-  		  color: $orangeRed;
-  		  width: 360px;
-    	  margin-right: 10px;
-  		}
-  		td.duration, td.sum {
-  		  width: 100px;
-  		  text-align: right;
-  		}
-	  }
-	  table#sum {
-  	  td { font-size: 14px; padding: 3px 0px; }
-  	  td.title { width: 580px; }
-  	  td.durationTitle { width: 480px; }
-  	  td.sum {
-  	    text-align: right;
-  	    width: 100px;
-  	  }
-  	  .discount, .tax { border-bottom: 2px solid black;}
-  	  .tax, .net, .final { font-weight: bold; }
-  	}
   	ul{ 
   	padding-bottom: 5px;
   	border-bottom: 1px dashed grey;
@@ -207,16 +175,35 @@ body#report  {
   		  text-align: right;
   		}
   	}
-  	dl#sum {
-  	  dd, dt { font-size: 14px; padding: 3px 0px;}
-  	  dt { @include grid(58); }
-  	  dt.duration { @include grid(48); }
-  	  dd {
-  	    text-align: right;
-  	    @include grid(10);
-  	  }
-  	  .discount, .tax { border-bottom: 2px solid black;}
-  	  .tax, .net, .final { font-weight: bold; }
+  }
+  div#expenses{
+	  table { font-family: "Courier New"; } 
+  	ul{ 
+  	padding-bottom: 5px;
+  	border-bottom: 1px dashed grey;
+  		li.time{ padding: 5px 0px; @include grid(10,0,1);	}
+  		li.description{
+  		  padding: 5px 0px;
+  		  color: $orangeRed;
+  		  @include grid(46,0,1);
+  		}
+  		li.sum {
+  		  @include grid(10,0,0);
+  		  padding: 5px 0px;
+  		  text-align: right;
+  		}
   	}
   }
+  dl.sum {
+	  dd, dt { font-size: 14px; padding: 3px 0px;}
+	  dt { @include grid(58); }
+	  dt.duration { @include grid(48); }
+	  dd {
+	    text-align: right;
+	    @include grid(10);
+	  }
+	  .tax, .net, .final { font-weight: bold; }
+	  border-bottom: 2px solid black;
+	}
+	dl.sum.final { border-bottom: none; } 
 }
