Improve handling with invoices and closing projects

--- a/app/stylesheets/projects.scss
+++ b/app/stylesheets/projects.scss
@@ -1,52 +1,18 @@
 @import "partials/base";
 
 body#projects, body#expenses, body#invoices, body#status_messages { 
-  div#projectForm {
-    div.wrapper {
-      @include rounded;
-      background-color: $yellow;
-	    border: 1px solid grey;
-	    border-top:5px solid $orangeRed;
-	  } 
-	 a {display: block; font-weight:bold; padding: 0px 0px 15px 15px; color: white;}
-	
-  div#createProject {
-    @include grid(52,1,2);
-    legend dl dt { text-align: left;}
-    dl dd, dl dt, legend { margin-bottom: 10px;}
-    dl dt.title { @include grid(8); font-weight:bold;}
-    dl dd.title { @include grid(42); }
-    dl dd.title input { width: 420px;}
-    dl dt.description { @include grid(10,0,40); font-weight:bold;}
-    dl dd.description { @include grid(50);  }
-    dl dd.description textarea {
-      height: 60px;
-      width: 500px;
-    }
-    dl dt.small { @include grid(11);  }
-    dl dd.small { @include grid(6); }
-    dl dd.small input { width: 40px; }
-    dl dt.submit {@include grid(16);}
-    dl dt.submit input.submit {margin:0px;}
-  }
-    div#selectCustomer {
-    fieldset.customer { margin-top: 27px; }
-    @include grid(34);
-    dl dt { @include grid(10,1,2); }
-    dl dd {@include grid(18);}
-    dl dd select { width: 180px; }
-  }
-  }
-  
   div.toolbar li, ul.title li { @include grid(29,0,0,1,1); }
   ul.title li.nr { @include grid(6); }
   div.toolbar li.nr{ @include grid(7); }
   div.toolbar li{ @include grid(30.5); }
-  ul.title li.date { @include grid(12); }
+  ul.title li.date { @include grid(10); }
   div.toolbar li.date{ @include grid(16); }
   ul.title li.actions {
-    @include grid(8);
+    @include grid(10);
     text-align: right;
+    img, a {
+      margin-left: 2px;
+    }
   }
 }
 
@@ -57,6 +23,7 @@ div.project {
     dl dt, dl dd { @include grid(8); }
     dl dt.description, dl dd.description { @include grid(80, 0, 14); margin-bottom: 10px; }
   }
+  ul.record { margin-top: 10px; }
   div.contacts {
     margin-top: 20px;
     ul.record li span { display: block; }
