--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -6,6 +6,7 @@
       %li= project.customer.name
       %li.date= l(project.created_at, :format => :date)
       %li.actions
+        = image_tag("/images/icons-nancy/invoice-flag.gif") unless project.invoices.find_by_closed(0).nil?
         - if project.id == @project.id
           = link_to image_tag("/images/icons-nancy/container-close.gif"), projects_path(:order => params[:order], :closed => params[:closed])
         - else
@@ -20,10 +21,13 @@
           %span.actions
             = link_to image_tag("/images/icons-nancy/project-report.gif"), report_project_path(project)
             = link_to image_tag("/images/icons-nancy/project-pdf.gif"), report_project_path(project)+".pdf"
-            -if project.closed == 0
-              = link_to image_tag("/images/icons-nancy/project-open.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
-            -else
-              = link_to image_tag("/images/icons-nancy/project-close.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
+            - if project.has_nothing_invoiced
+              - if project.closed == 0
+                = link_to image_tag("/images/icons-nancy/project-open.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
+              - else
+                = link_to image_tag("/images/icons-nancy/project-close.gif"), switch_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
+            - else
+              = image_tag("/images/icons-nancy/project-inactive.gif")
           %hr.clear/
           %dl
             %dt.description= Project.human_attribute_name('description')
