--- a/app/views/projects/expenses/_list.html.haml
+++ b/app/views/projects/expenses/_list.html.haml
@@ -1,5 +1,5 @@
 %h2= Expense.model_name.human
-%span.actions= link_to image_tag("/images/icons-nancy/project-report.gif"), new_project_expense_path(@project)
+%span.actions= link_to image_tag("/images/icons-nancy/expense-create.gif"), new_project_expense_path(@project) if @project.closed == 0
 %hr.clear/
 .details
   %ul.toolbar
@@ -13,6 +13,7 @@
       %li.description= expense.description
       %li.amount= expense.amount
       %li.actions
-        = link_to image_tag("/images/icons-nancy/edit.gif"), edit_project_expense_path(@project.id, expense.id)
-        = link_to image_tag("/images/icons-nancy/delete.gif"), project_expense_path(@project.id, expense.id), :method => "delete"
+        - if @project.closed == 0
+          = link_to image_tag("/images/icons-nancy/edit.gif"), edit_project_expense_path(@project.id, expense.id)
+          = link_to image_tag("/images/icons-nancy/delete.gif"), project_expense_path(@project.id, expense.id), :method => "delete"
       .clear
