--- a/app/views/settings/configurations/index.html.haml
+++ b/app/views/settings/configurations/index.html.haml
@@ -5,3 +5,4 @@
     %li.active= link_to "Basic Configurations", settings_configurations_path
     .clear
 = netzke :configurations, :class_name => "Basepack::GridPanel", :model => "Configuration", :header => true, :columns => [{:name => :key, :header => Configuration.human_attribute_name('key')},{:name => :value, :header => Configuration.human_attribute_name('value')},{:name => :label, :header => Configuration.human_attribute_name('label')}]
+= netzke :text_templates, :class_name => "Basepack::GridPanel", :model => "TextTemplate", :header => true, :columns => [{:name => :kind, :header => "Kind of"},{:name => :title, :header => "Title"},{:name => :label, :header => "Parent"}, {:name => :value, :header => "Value"}]
