--- a/app/views/works/_form.html.haml
+++ b/app/views/works/_form.html.haml
@@ -13,12 +13,14 @@
           %li.field.half
             = f.text_field :started_at, :value => @work.started_at.strftime('%H:%M'),:size => 4, :class => 'left'
             = f.text_field :ended_at, :value => @work.ended_at.strftime('%H:%M'), :size => 4, :class => 'right'
-          %li.field.half
-            %input.left
-            %input.right
+          %li.field
+            = select_tag("work[fee]", options_for_select(@fees.map {|f| ["#{t :works_charge_with} #{number_to_currency(f, :unit => @currency)}", "#{f}"]}))
           %li.field.twoColumn.twoRow
             = f.label :description
             = f.text_area :description
+          %li.field.twoColumn.half
+            = select_tag("work[text_template_id]", options_for_select(@work_titles.map {|t| [t.title, t.id]}))
+            = select_tag("work[text_template_id]", options_for_select(@work_descriptions.map {|t| t.title}), {:onchange => "$('textarea#work_description').text(this.value);"})
       .buttons
         %ul
           %li.toggle &nbsp;
