--- a/app/views/customers/locations/_show.html.haml
+++ b/app/views/customers/locations/_show.html.haml
@@ -5,7 +5,7 @@
   = "#{@locations.index(@location) + 1} #{t(:customer_of)} #{@locations.count}"
   -if (@locations.index(@location) + 1) < @locations.count
     = link_to image_tag("/images/icons-nancy/next.gif"), customer_location_path(@customer, @locations.at(@locations.index(@location) +1), :order => params[:order])
-%span.actions
+%span.actions.tipped
   = link_to image_tag("/images/icons-nancy/location-create.gif"), new_customer_location_path(@customer, :order => params[:order]) if can? :manage, Location
   = link_to image_tag("/images/icons-nancy/edit.gif"), edit_customer_location_path(@customer, @location, :order => params[:order]) if can? :manage, Location
   = link_to image_tag("/images/icons-nancy/delete.gif"), customer_location_path(@customer, @location, :order => params[:order]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Location
