--- a/app/views/projects/expenses/_list.html.haml
+++ b/app/views/projects/expenses/_list.html.haml
@@ -1,5 +1,5 @@
 %h2= Expense.model_name.human
-%span.actions= link_to image_tag("/images/icons-nancy/expense-create.gif"), new_project_expense_path(@project) if @project.closed == 0
+%span.actions.tipped= link_to image_tag("/images/icons-nancy/expense-create.gif"), new_project_expense_path(@project) if @project.closed == 0
 %hr.clear/
 .details
   %ul.toolbar
@@ -12,7 +12,7 @@
       %li.from am #{expense.created_at}
       %li.description= expense.description
       %li.amount= expense.amount
-      %li.actions
+      %li.actions.tipped
         - if @project.closed == 0
           = link_to image_tag("/images/icons-nancy/edit.gif"), edit_project_expense_path(@project.id, expense.id)
           = link_to image_tag("/images/icons-nancy/delete.gif"), project_expense_path(@project.id, expense.id), :method => "delete"
