--- a/app/views/projects/status_messages/_list.html.haml
+++ b/app/views/projects/status_messages/_list.html.haml
@@ -1,5 +1,5 @@
 %h2= StatusMessage.model_name.human
-%span.actions= link_to image_tag("/images/icons-nancy/statusMessage-create.gif"), new_project_status_message_path(@project)
+%span.actions.tipped= link_to image_tag("/images/icons-nancy/statusMessage-create.gif"), new_project_status_message_path(@project)
 %hr.clear/
 .details
   %ul.toolbar
@@ -12,7 +12,7 @@
       %li.from am #{status_message.created_at}
       %li.title= status_message.title
       %li.attachment= link_to 'Download', status_message.attachment.url
-      %li.actions
+      %li.actions.tipped
         = link_to image_tag("/images/icons-nancy/edit.gif"), edit_project_status_message_path(@project.id, status_message.id)
         = link_to image_tag("/images/icons-nancy/delete.gif"), project_status_message_path(@project.id, status_message.id), :method => "delete"
       .clear
