--- a/app/views/works/_worklist.html.haml
+++ b/app/views/works/_worklist.html.haml
@@ -10,7 +10,7 @@
     %li.description
       %h3= work.text_template.title unless work.text_template.nil?
       = work.description
-    %li.actions
+    %li.actions.tipped
       = link_to image_tag("/images/icons-nancy/delete.gif"), work_path(work, :date => work.started_at.strftime("%Y-%m-%d")), :method => :delete, :remote => false
     .clear
 :javascript
