--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -7,35 +7,35 @@
           %li= msg
       .clear
   .layout
-    = form_for(@customer) do |f|
+    = form_for(@customer, :builder => TippedFormBuilder) do |f|
       %div{:style => "display: #{'none' unless @show_customer_form}"}
         %fieldset
           %legend= t(:customer_form_customer)
           %ul
-            %li.field
+            %li.field.tipped
               = f.label :shortname
               = f.text_field :shortname
-            %li.field
+            %li.field.tipped
               = f.label :name
               = f.text_field :name
-            %li.field
+            %li.field.tipped
               = f.label :website
               = f.text_field :website
         = f.fields_for :locations, @customer.locations.first do |l|
           %fieldset
             %legend= t(:customer_form_location)
             %ul
-              %li.field.half
+              %li.field.half.tipped
                 = l.label :name, :class => 'left'
                 =l.text_field :name, :class => 'left'
                 = l.label :street, :class => 'right'
                 = l.text_field :street, :class => 'right'
-              %li.field.third
+              %li.field.third.tipped
                 = l.label :zip
                 = l.text_field :zip, :class => 'left'
                 = l.label :city, :class => 'right'
                 = l.text_field :city, :class => 'right'
-              %li.field.half
+              %li.field.half.tipped
                 = l.label :fon, :class => 'left'
                 = l.text_field :fon, :class => 'left'
                 = l.label :fax, :class => 'right'
@@ -44,24 +44,24 @@
             %fieldset
               %legend= t(:customer_form_contact)
               %ul
-                %li.field.third
+                %li.field.third.tipped
                   = c.select(:salutation, options_for_select(["Mr.", "Ms."]))
                   = c.label :title, :class => 'right'
                   = c.text_field :title, :class => "right"
-                %li.field.half
+                %li.field.half.tipped
                   = c.label :firstname, :class => 'left'
                   = c.text_field :firstname, :class => 'left'
                   = c.label :lastname, :class => 'right'
                   = c.text_field :lastname, :class => 'right'
-                %li.field
+                %li.field.tipped
                   = c.label :department
                   = c.text_field :department
-                %li.field.half
+                %li.field.half.tipped
                   = c.label :fon, :class => 'left'
                   = c.text_field :fon, :class => 'left'
                   = c.label :mobile, :class => 'right'
                   = c.text_field :mobile, :class => 'right'
-                %li.field
+                %li.field.tipped
                   = c.label :email
                   = c.text_field :email
       .buttons
