--- a/app/views/projects/expenses/_form.html.haml
+++ b/app/views/projects/expenses/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([@project, @expense]) do |f|
+= form_for([@project, @expense], :builder => TippedFormBuilder) do |f|
   %fieldset
     %legend= t('helpers.form', :model=> Expense.model_name.human)
     -if @expense.errors.any?
@@ -9,10 +9,10 @@
             %li= msg
         .clear
     %ul
-      %li.field.threeColumn
+      %li.field.threeColumn.tipped
         = f.label :description
         = f.text_field :description
-      %li.field.half
+      %li.field.half.tipped
         = f.label :amount, :class => 'left'
         = f.text_field :amount, :class => 'left'
         = f.label :amount, :class => 'right'
